Build with QtCreator 4.3
- Fix QtCreator version detection
- Use 'AssistProposalItemInterface' for all 4.x branches
- Move mimemtypes declaration into plugin's JSON metadata
- Use Utils::Icon with Core::IOptionsPage::setCategoryIcon()

--- a/RustEditor.json.in
+++ b/RustEditor.json.in
@@ -12,6 +12,17 @@
     \"Category\" : \"Other Languages\",
     \"Description\" : \"Rust editor component.\",
     \"Url\" : \"\",
-    $$dependencyList
+    $$dependencyList,
+
+    \"Mimetypes\" : \"
+    <?xml version=\'1.0\'?>
+    <mime-info xmlns=\'http://www.freedesktop.org/standards/shared-mime-info\'>
+        <mime-type type=\'text/x-rustsrc\'>
+            <sub-class-of type=\'text/x-csrc\'/>
+            <comment>Rust source code</comment>
+            <glob pattern=\'*.rs\'/>
+        </mime-type>
+    </mime-info>
+    \"
 }
 
